fixed button alignment

--- a/todolist/static/todolist/style.css
+++ b/todolist/static/todolist/style.css
@@ -3,7 +3,7 @@ table {
 }
 
 td {
-    padding: 10px 0;     /* 10px top & bottom padding, 0px left & right */
+    padding: 5px 0;     /* 10px top & bottom padding, 0px left & right */
     border-width: 1px 0; /*  1px top & bottom border,  0px left & right */
     border-color: #000;
     border-style: solid;
